# fairplay_backend

./: README.md  pyproject.toml
api/: main.py
api/db/: __init__.py  session.py
api/db/models/: __init__.py  alert.py  base.py  certificate.py  comments.py  forum.py  games.py  lesson.py  messages.py  module.py  newsletter.py  post.py  user.py
api/endpoints/: README.md  __init__.py  alert.py  certificate.py  chat.py  comments.py  forum.py  games.py  gemini.py  health.py  image.py  journal.py  lesson.py  messages.py  module.py  news.py  newsletter.py  post.py  upload.py  user.py
api/interfaces/: alert.py  certificate.py  comments.py  forum.py  games.py  health.py  lesson.py  messages.py  module.py  post.py  user.py  utils.py
api/middleware/: __init__.py  handler_middleware.py
api/services/: __init__.py  alert.py  base.py  certificate.py  comments.py  forum.py  games.py  gemini.py  journal.py  lesson.py  messages.py  module.py  news.py  newsletter.py  post.py  tokenmanager.py  user.py
api/utils/: exceptions.py  misc.py  partial.py  spam_filter.py
scripts/: app.py  setup.py
